Book rating on addition

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
       <li>
         <h3><%= book.title %></h3>
         <p><%= book.isbn %></p>
-        <p>Average Rating: </p>
+        <p>Average Rating: <%= book.average_rating %></p>
       </li>
     <% end %>
   </div>
