Add sign up feature

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -4,6 +4,10 @@ body {
   padding-top: 80px;
 }
 
-#log-out {
-  margin-top: 15px;
+.links {
+  margin-top: 10px;
+
+  a {
+    margin-left: 10px;
+  }
 }
