--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,25 +6,6 @@
 
 <div class="row">
   <div class="span12">
-    <% @books.each do |book| %>
-      <li>
-        <h3><%= book.title %></h3>
-        <p><%= book.isbn %></p>
-        <p>Average Rating: <%= book.average_rating %></p>
-
-        <% if user_signed_in? %>
-          <%= form_for book.rating_for(current_user), method: :put, url: book_rating_path(book, current_user) do |f| %>
-            <div class="rating">
-              <% 1.upto(5) do |rating| %>
-                <label class="radio inline">
-                  <%= f.radio_button :value, rating %> <%= rating %>
-                </label>
-              <% end %>
-            </div>
-            <%= f.submit 'Rate' %>
-          <% end %>
-        <% end %>
-      </li>
-    <% end %>
+    <%= render(@books) or raw('<em class="no-books">No books have been added yet.</em>') %>
   </div>
 </div>
