--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,8 +1,9 @@
 <div class="book">
   <h3><%= book.title %></h3>
-  <p><%= book.isbn %></p>
+  <small>ISBN: <%= book.isbn %></small>
 
-  <ul class="ratings">
+  <h4>Ratings</h4>
+  <ul class="unstyled ratings">
     <% book.ratings.each do |rating| %>
       <%= render rating %>
     <% end %>
