--- a/app/views/ratings/_rating.html.erb
+++ b/app/views/ratings/_rating.html.erb
@@ -1,17 +1,17 @@
 <li>
-  <%= rating_title(rating) %>:
+  <%= rating_title(rating) %> &mdash;
 
   <% if current_user == rating.user %>
-    <%= form_for rating, method: :put, url: book_rating_path(rating.book_id, rating.user_id) do |f| %>
-      <div class="rating">
+    <div class="rating">
+      <%= form_for rating, method: :put, url: book_rating_path(rating.book_id, rating.user_id) do |f| %>
         <% 1.upto(5) do |rating| %>
           <label class="radio inline">
             <%= f.radio_button :value, rating %> <%= rating %>
           </label>
         <% end %>
-      </div>
-      <%= f.submit 'Rate' %>
-    <% end %>
+        <%= f.submit 'save', class: 'btn submit-rating' %>
+      <% end %>
+    </div>
   <% else %>
     <%= rating.value %>
   <% end %>
