--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,5 +7,7 @@
 <div class="row">
   <div class="span12">
     <%= render(@books) or raw('<em class="no-books">No books have been added yet.</em>') %>
+
+    <%= paginate @books %>
   </div>
 </div>
