--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <div class="links">
         <% if user_signed_in? %>
           <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'btn pull-right' %>
+          <%= link_to 'Add book', new_book_path, class: 'btn pull-right' %>
         <% else %>
           <%= link_to 'Sign in', new_user_session_path, class: 'btn pull-right' %>
           <%= link_to 'Sign up', new_user_registration_path, class: 'btn pull-right' %>
