--- a/app/views/ratings/_rating.html.erb
+++ b/app/views/ratings/_rating.html.erb
@@ -1,7 +1,7 @@
 <li>
   <%= rating_title(rating) %> &mdash;
 
-  <% if current_user == rating.user %>
+  <% if RatingAuthorization.new(rating, current_user).request %>
     <div class="rating">
       <%= form_for rating, method: :put, url: book_rating_path(rating.book_id, rating.user_id) do |f| %>
         <% 1.upto(5) do |rating| %>
